# MK404

./: .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Einsy.c  Einsy.cpp  FirmwareDebug.md  Getting Started.md  MK3S.afx  MK404.cpp  MK404Exec.html  MM-control-01.hex  MMU2.cpp  MMU2.h  Macros.h  Makefile  README.md  _config.yml  build.yml  index.md  io.github.vintagepc.MK404.yml  mmu.c  mmu.h  stk500boot_v2_mega2560.hex  style.css
.github/: CONTRIBUTING.md  IWYU.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  new-printer.md  question-discussion.md
.github/workflows/: IWYU.yml  build.yml  ccpp.yml  cmake-build.yml  cppcheck.yml  gltest.yml  lint.yml  release.yml  tests.yml
Firmware/: MarlinSerial.h  Marlin_main.cpp  config.h  mmu.cpp  ultralcd.cpp  ultralcd.h
SDCard/: CMakeLists.txt  Readme.md  Test.gcode  VFA-Test.gcode
_includes/: checkbox.html  dropdown.html  enabler.html  spinbox.html  textinput.html  vimeo.html
assets/: Idler_moving.mtl  LCD-knobR2.mtl  MMU_stationary.mtl  SDCard.mtl  Sheet.mtl  Stationary.mtl  TestWrapper.sh  Triangles.mtl  X_AXIS.mtl  X_Axis.mtl  Y_AXIS.mtl  Y_Axis.mtl  Z_Axis.mtl  launch-mk404.sh  updateTOC.sh
assets/Bear/: bear21_mk3s_simulator_e-axis.mtl  bear21_mk3s_simulator_e-axis_w-hotend-fan.mtl  bear21_mk3s_simulator_frame.mtl  bear21_mk3s_simulator_lcd_knob.mtl  bear21_mk3s_simulator_print_fan.mtl  bear21_mk3s_simulator_x-axis.mtl  bear21_mk3s_simulator_y-axis.mtl
assets/CW1/: CW1S_Platform.mtl  CW1_Base.mtl  CW1_Fan.mtl  CW1_Knob.mtl  CW1_LEDs.mtl  CW1_Lid.mtl  CW1_Tank.mtl
assets/Firmware/: MK1-mR13a.hex  MK2-mR13a.hex  MK25-mR13a.hex  MK25S-mR13a.hex  MK2MMU-mR13a.hex  MK3S.afx  MMU3_3.0.1+837.hex  Prusa-CW1-Firmware-en-v3.1.0.hex  Prusa-CW1S-Firmware-en-v3.1.0.hex
assets/MK2/: mk2_base.mtl  mk2_e.mtl  mk2_y.mtl  mk2_z.mtl  mk2mmu_base.mtl  mk2mmu_e.mtl
assets/Stock/: E_MMU.mtl  MMU_Selector.mtl  MMU_stationary.mtl  Print-fan_rotor.mtl  SSSheet.mtl  Z_AXIS.mtl
board_einsy/: Einsy.c  MK3S.afx  Makefile  build-fw.sh
board_einsy/Firmware/: Marlin.h  backlight.cpp  config.h
board_einsy/hwDefs/: Einsy_EEPROM.c  Einsy_EEPROM.h  TMC2130.c  TMC2130.h  fan.h  hd44780.c  hd44780.h  rotenc.c  rotenc.h  thermistor.c  thermistortables.h  uart_pty.c  uart_pty.h  w25x20cl.h
cmake/: FindFreeGLUT.cmake  FindLibElf.cmake  FindSDL2.cmake
hwDefs/: ADC_Buttons.cpp  ADC_Buttons.h  Button.cpp  Button.h  Einsy_EEPROM.c  Einsy_EEPROM.cpp  Einsy_EEPROM.h  Fan.cpp  Fan.h  HC595.cpp  HC595.h  HD44780.cpp  HD44780.h  HD44780GL.cpp  HD44780GL.h  Heater.cpp  Heater.h  IRSensor.c  IRSensor.cpp  IRSensor.h  LED.cpp  LED.h  PINDA.c  PINDA.cpp  PINDA.h  RotaryEncoder.cpp  RotaryEncoder.h  TMC2130.c  TMC2130.cpp  TMC2130.h  Thermistor.cpp  Thermistor.h  UART_Logger.h  VoltageSrc.cpp  VoltageSrc.h  fan.c  fan.h  hc595.c  hc595.h  hd44780.c  (+24 more)
include/: ADCPeripheral.h  BasePeripheral.h  IRQHelper.h  Macros.h  PinHelper_2560.h  SPIPeripheral.h  SerialPipe.cpp  SerialPipe.h  Util.h  thermistortables.h
include/MK3/: Configuration_prusa.h  config.h
lang/: not_tran.txt  not_used.txt
parts/: ADCPeripheral.h  BasePeripheral.h  Board.cpp  Board.h  I2CPeripheral.cpp  I2CPeripheral.h  IKeyClient.cpp  IKeyClient.h  IRQHelper.h  IScriptable.cpp  IScriptable.h  IThermalModel.h  KeyController.cpp  KeyController.h  PinNames.h  PinSpec.h  PinSpec_Helper.h  Printer.cpp  Printer.h  PrinterFactory.cpp  PrinterFactory.h  SPIPeripheral.cpp  SPIPeripheral.h  ScriptHost.cpp  ScriptHost.h  Scriptable.cpp  Scriptable.h  SoftPWMable.cpp  SoftPWMable.h  TelemetryHost.cpp  TelemetryHost.h  Wiring.h
parts/boards/: CW1S.cpp  CW1S.h  EinsyRambo.cpp  EinsyRambo.h  IPCBoard.h  MM_Control_01.cpp  MM_Control_01.h  MiniRambo.cpp  MiniRambo.h  SL1.cpp  SL1.h  Test_Board.cpp  Test_Board.h
parts/components/: 74HCT4052.cpp  74HCT4052.h  A4982.cpp  A4982.h  ADC_Buttons.cpp  ADC_Buttons.h  Beeper.cpp  Beeper.h  Button.cpp  Button.h  EEPROM.cpp  EEPROM.h  Einsy_EEPROM.cpp  Einsy_EEPROM.h  Fan.cpp  Fan.h  GCodeSniffer.cpp  GCodeSniffer.h  GLHelper.cpp  GLHelper.h  GLIndicator.cpp  GLIndicator.h  GLMotor.cpp  GLMotor.h  HC595.cpp  HC595.h  HD44780.cpp  HD44780.h  HD44780GL.cpp  HD44780GL.h  Heater.cpp  Heater.h  IPCIndicator.cpp  IPCIndicator.h  IRSensor.cpp  IRSensor.h  LED.cpp  LED.h  MCP23S17.cpp  MCP23S17.h  (+33 more)
parts/pinspecs/: PinSpec_2560.h  PinSpec_32u4.h
parts/printers/: IPCPrinter.cpp  IPCPrinter.h  IPCPrinter_MMU2.cpp  IPCPrinter_MMU2.h  Prusa_CW1.h  Prusa_CW1S.cpp  Prusa_CW1S.h  Prusa_MK1_13.cpp  Prusa_MK1_13.h  Prusa_MK25S_13.cpp  Prusa_MK25S_13.h  Prusa_MK25_13.cpp  Prusa_MK25_13.h  Prusa_MK2MMU_13.cpp  Prusa_MK2MMU_13.h  Prusa_MK2_13.cpp  Prusa_MK2_13.h  Prusa_MK3.cpp  Prusa_MK3.h  Prusa_MK3MMU2.cpp  Prusa_MK3MMU2.h  Prusa_MK3S.cpp  Prusa_MK3S.h  Prusa_MK3SMMU2.cpp  Prusa_MK3SMMU2.h  Prusa_MMU2.cpp  Prusa_MMU2.h  Prusa_SL1_Ctl.cpp  Prusa_SL1_Ctl.h  Test_Printer.cpp  Test_Printer.h
parts/wiring/: CW1S.h  Einsy_1_0a.h  Einsy_1_1a.h  MM_Control_01.h  SL1_Control.h  Test_Wiring.h  miniRAMBo_1_0a.h  miniRAMBo_1_1b.h  miniRAMBo_1_3a.h
ref/: CommandLine.md  README.md  Scripting.md  Scripting_MK3.md  Scripting_MK3MMU2.md  Scripting_MK3S.md  Scripting_MK3SMMU2.md  TraceOptions.md  TraceOptions_MK3.md  TraceOptions_MK3MMU2.md  TraceOptions_MK3S.md  TraceOptions_MK3SMMU2.md  updateTOC.sh
scripts/: Scripting.md  atmega2560_test_fw.c  part_test_script.txt  test_E_maxtemp.txt  test_boot.txt  test_seclang.txt
scripts/tests/: CMakeLists.txt  Internal_UnhandledActionsTests.cpp  Internal_UnhandledActionsTests.h  (+89 more)
utility/: CW1S_Full.cpp  CW1S_Full.h  CW1S_Lite.cpp  CW1S_Lite.h  Color.cpp  Color.h  Config.h  EnabledType.h  FatImage.cpp  FatImage.h  GLObj.cpp  GLObj.h  GLPrint.cpp  GLPrint.h  MK2_Full.cpp  MK2_Full.h  MK3SGL.cpp  MK3SGL.h  MK3S_Bear.cpp  MK3S_Bear.h  MK3S_Full.cpp  MK3S_Full.h  MK3S_Lite.cpp  MK3S_Lite.h  MMUSideband.h  Macros.h  OBJCollection.cpp  OBJCollection.h  PCH.h  PLYExport.cpp  PLYExport.h  PrintVisualType.h  SerialPipe.cpp  SerialPipe.h  TestVis.cpp  TestVis.h  Util.h  thermistortables.h
(+3 files in other folders)
